Refacto and updgrade wkf models and management.

--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -2,7 +2,16 @@
 "menu-wkf","Wkf Management","menu","Wkf Management","Gestion des processus","",""
 "menu-wkf-configurations","Configurations","menu","Configurations","Configurations","",""
 "menu-wkf-instances","Instances","menu","Instances","Instances","",""
-"menu-wkf-nodes","Nodes","menu","Nodes","Nœuds","",""
+"menu-wkf-nodes-root","Nodes","menu","Nodes","Nœuds","",""
+"menu-wkf-nodes-root-event","Events","menu","Events","Evènements","",""
+"menu-wkf-start-event","Start events","menu","Start events","Evènements de départ","",""
+"menu-wkf-end-event","End events","menu","End events","Evènements de fin","",""
+"menu-wkf-nodes-root-activity","Activities","menu","Activities","Activités","",""
+"menu-wkf-task","Tasks","menu","Tasks","Tâches","",""
+"menu-wkf-nodes-root-gateway","Gateways","menu","Gateways","Passerelles","",""
+"menu-wkf-inclusive-gateway","Inclusive gateways","menu","Inclusive gateways","Inclusives","",""
+"menu-wkf-exclusive-gateway","Exclusive gateways","menu","Exclusive gateways","Exclusives","",""
+"menu-wkf-parallel-gateway","Parallel gateways","menu","Parallel gateways","Parallèles","",""
 "menu-wkf-transitions","Transitions","menu","Transitions","Transitions","",""
 "menu-wkf-workflows","Workflows","menu","Workflows","Les Processus","",""
 "com.axelor.wkf.db.Instance","workflow","field","Workflow","Processus","",""
@@ -32,31 +41,87 @@
 "com.axelor.wkf.db.Workflow","bpmn","field","","BPMN","",""
 "com.axelor.wkf.db.Workflow","xmlData","field","","Données XML","",""
 "com.axelor.wkf.db.Workflow","ref","field","","Ref","",""
-"com.axelor.wkf.db.Node","name","field","Name","Nom","",""
-"com.axelor.wkf.db.Node","type","field","Type","Type","",""
-"com.axelor.wkf.db.Node","action","field","Action","Action","",""
-"com.axelor.wkf.db.Node","logicOperator","field","Start Logic Operator","Opérateur Logique de Départ","",""
+"com.axelor.wkf.db.Node","name","field","","Nom","",""
+"com.axelor.wkf.db.Node","type","field","","Type","",""
+"com.axelor.wkf.db.Node","action","field","","Action","",""
+"com.axelor.wkf.db.Node","operator","field","","Opérateur Logique","",""
 "com.axelor.wkf.db.Node","startTransitions","field","","Transition de départ","",""
 "com.axelor.wkf.db.Node","endTransitions","field","","Transition de fin","",""
 "com.axelor.wkf.db.Node","description","field","","Description","",""
 "com.axelor.wkf.db.Node","ref","field","","Ref","",""
-"com.axelor.wkf.db.Transition","startNode","field","","Noeud de départ","",""
-"com.axelor.wkf.db.Transition","nextNode","field","","Prochain noeud","",""
+"com.axelor.wkf.db.node.StartEvent","name","field","","Nom","",""
+"com.axelor.wkf.db.node.StartEvent","type","field","","Type","",""
+"com.axelor.wkf.db.node.StartEvent","action","field","","Action","",""
+"com.axelor.wkf.db.node.StartEvent","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.StartEvent","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.StartEvent","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.StartEvent","description","field","","Description","",""
+"com.axelor.wkf.db.node.StartEvent","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.EndEvent","name","field","","Nom","",""
+"com.axelor.wkf.db.node.EndEvent","type","field","","Type","",""
+"com.axelor.wkf.db.node.EndEvent","action","field","","Action","",""
+"com.axelor.wkf.db.node.EndEvent","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.EndEvent","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.EndEvent","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.EndEvent","description","field","","Description","",""
+"com.axelor.wkf.db.node.EndEvent","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.Task","name","field","","Nom","",""
+"com.axelor.wkf.db.node.Task","type","field","","Type","",""
+"com.axelor.wkf.db.node.Task","action","field","","Action","",""
+"com.axelor.wkf.db.node.Task","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.Task","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.Task","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.Task","description","field","","Description","",""
+"com.axelor.wkf.db.node.Task","ref","field","","Ref","",""
+"com.axelor.wkf.db.Gateway","name","field","","Nom","",""
+"com.axelor.wkf.db.Gateway","type","field","","Type","",""
+"com.axelor.wkf.db.Gateway","action","field","","Action","",""
+"com.axelor.wkf.db.Gateway","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.Gateway","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.Gateway","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.Gateway","description","field","","Description","",""
+"com.axelor.wkf.db.Gateway","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.InclusiveGateway","name","field","","Nom","",""
+"com.axelor.wkf.db.node.InclusiveGateway","type","field","","Type","",""
+"com.axelor.wkf.db.node.InclusiveGateway","action","field","","Action","",""
+"com.axelor.wkf.db.node.InclusiveGateway","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.InclusiveGateway","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.InclusiveGateway","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.InclusiveGateway","description","field","","Description","",""
+"com.axelor.wkf.db.node.InclusiveGateway","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","name","field","","Nom","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","type","field","","Type","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","action","field","","Action","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","description","field","","Description","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.ParallelGateway","name","field","","Nom","",""
+"com.axelor.wkf.db.node.ParallelGateway","type","field","","Type","",""
+"com.axelor.wkf.db.node.ParallelGateway","action","field","","Action","",""
+"com.axelor.wkf.db.node.ParallelGateway","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.ParallelGateway","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.ParallelGateway","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.ParallelGateway","description","field","","Description","",""
+"com.axelor.wkf.db.node.ParallelGateway","ref","field","","Ref","",""
+"com.axelor.wkf.db.Transition","startNode","field","Start node","Noeud de départ","",""
+"com.axelor.wkf.db.Transition","nextNode","field","Next node","Prochain noeud","",""
 "com.axelor.wkf.db.Transition","name","field","Name","Nom","",""
-"com.axelor.wkf.db.Transition","condition","field","","Condition","",""
-"com.axelor.wkf.db.Transition","sequence","field","","Séquence","",""
-"com.axelor.wkf.db.Transition","description","field","","Description","",""
-"com.axelor.wkf.db.Transition","signal","field","","Signal","",""
-"com.axelor.wkf.db.Transition","role","field","","Role","",""
-"com.axelor.wkf.db.Transition","ref","field","","Ref","",""
+"com.axelor.wkf.db.Transition","condition","field","Condition","Condition","",""
+"com.axelor.wkf.db.Transition","sequence","field","Sequence","Séquence","",""
+"com.axelor.wkf.db.Transition","description","field","Description","Description","",""
+"com.axelor.wkf.db.Transition","signal","field","Signam","Signal","",""
+"com.axelor.wkf.db.Transition","role","field","Role","Rôle","",""
+"com.axelor.wkf.db.Transition","ref","field","Ref","Ref","",""
 "node.logic.operator.selection","","select","","","",""
-"node.logic.operator.selection","and","select","AND","ET","",""
-"node.logic.operator.selection","or","select","OR","OU","",""
-"node.logic.operator.selection","xor","select","XOR","XOR","",""
-"node.type.selection","start","select","Start","Démarrer","",""
-"node.type.selection","intermediary","select","Intermediary","Intermédiaire","",""
-"node.type.selection","stop","select","Stop","Arrêt","",""
-"node.type.selection","gateway","select","Gateway","Gateway","",""
+"node.logic.operator.selection","parallel","select","AND","ET","",""
+"node.logic.operator.selection","inclusive","select","OR","OU","",""
+"node.logic.operator.selection","exclusive","select","XOR","XOR","",""
+"node.type.selection","startEvent","select","Start event","Démarrer","",""
+"node.type.selection","task","select","Task","Tâche","",""
+"node.type.selection","endEvent","select","End event","Arrêt","",""
+"node.type.selection","gateway","select","Gateway","Passerelle","",""
 "com.axelor.wkf.db.Transition","end-transition-form","form","Transition","Transition","",""
 "end-transition-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.Transition","end-transition-grid","grid","Transitions","Transitions","",""
@@ -65,13 +130,31 @@
 "com.axelor.wkf.db.Instance","instance-form","form","Instances","Instances","",""
 "instance-form","","page","History","Historique","",""
 "instance-form","","page","Counter","Compteur","",""
+"instance-form","","page","Diagram","Diagramme","",""
 "com.axelor.wkf.db.Instance","instance-grid","grid","Instances","Instances","",""
 "com.axelor.wkf.db.InstanceHistory","instance-history-form","form","History","Historique","",""
 "com.axelor.wkf.db.InstanceHistory","instance-history-grid","grid","Histories","Historiques","",""
+"com.axelor.wkf.db.Node","node-grid","grid","Nodes","Nœuds","",""
 "com.axelor.wkf.db.Node","node-form","form","Node","Nœud","",""
 "node-form","","separator","Description","Description","",""
-"instance-form","","page","Diagram","Diagramme","",""
-"com.axelor.wkf.db.Node","node-grid","grid","Nodes","Nœuds","",""
+"com.axelor.wkf.db.node.StartEvent","start-event-grid","grid","Start events","Evènements de départ","",""
+"com.axelor.wkf.db.node.StartEvent","start-event-form","form","Start event","Evènements de départ","",""
+"start-event-form","","separator","Description","Description","",""
+"com.axelor.wkf.db.node.EndEvent","end-event-grid","grid","End events","Evènements de fin","",""
+"com.axelor.wkf.db.node.EndEvent","end-event-form","form","End event","Evènements de fin","",""
+"end-event-form","","separator","Description","Description","",""
+"com.axelor.wkf.db.node.Task","task-grid","grid","Tasks","Tâches","",""
+"com.axelor.wkf.db.node.Task","task-form","form","Task","Tâche","",""
+"task-form","","separator","Description","Description","",""
+"com.axelor.wkf.db.node.InclusiveGateway","inclusive-gateway-grid","grid","Inclusive gateways","Passerelles inclusives","",""
+"com.axelor.wkf.db.node.InclusiveGateway","inclusive-gateway-form","form","Inclusive gateway","Passerelle inclusive","",""
+"inclusive-gateway-form","","separator","Description","Description","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","exclusive-gateway-grid","grid","Exclusive gateways","Passerelles exclusives","",""
+"com.axelor.wkf.db.node.ExclusiveGateway","exclusive-gateway-form","form","Exclusive gateway","Passerelle exclusive","",""
+"exclusive-gateway-form","","separator","Description","Description","",""
+"com.axelor.wkf.db.node.ParallelGateway","parallel-gateway-grid","grid","Parallel gateways","Passerelles parallèles","",""
+"com.axelor.wkf.db.node.ParallelGateway","parallel-gateway-form","form","Parallel gateway","Passerelle parallèles","",""
+"parallel-gateway-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.Transition","start-transition-form","form","Transition","Transition","",""
 "start-transition-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.Transition","start-transition-grid","grid","Transitions","Transitions","",""
