Move Task to Activity.

--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -98,14 +98,14 @@
 "com.axelor.wkf.db.node.EndEvent","description","field","","Description","",""
 "com.axelor.wkf.db.node.EndEvent","ref","field","","Ref","",""
 
-"com.axelor.wkf.db.node.Task","name","field","","Nom","",""
-"com.axelor.wkf.db.node.Task","type","field","","Type","",""
-"com.axelor.wkf.db.node.Task","action","field","","Action","",""
-"com.axelor.wkf.db.node.Task","operator","field","","Opérateur Logique","",""
-"com.axelor.wkf.db.node.Task","startTransitions","field","","Transition de départ","",""
-"com.axelor.wkf.db.node.Task","endTransitions","field","","Transition de fin","",""
-"com.axelor.wkf.db.node.Task","description","field","","Description","",""
-"com.axelor.wkf.db.node.Task","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.Activity","name","field","","Nom","",""
+"com.axelor.wkf.db.node.Activity","type","field","","Type","",""
+"com.axelor.wkf.db.node.Activity","action","field","","Action","",""
+"com.axelor.wkf.db.node.Activity","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.Activity","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.Activity","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.Activity","description","field","","Description","",""
+"com.axelor.wkf.db.node.Activity","ref","field","","Ref","",""
 
 "com.axelor.wkf.db.node.IntermediateTimerEvent","name","field","","Nom","",""
 "com.axelor.wkf.db.node.IntermediateTimerEvent","type","field","","Type","",""
@@ -338,8 +338,8 @@
 "com.axelor.wkf.db.node.EndEvent","end-event-grid","grid","End events","Evènements de fin","",""
 "com.axelor.wkf.db.node.EndEvent","end-event-form","form","End event","Evènement de fin","",""
 "end-event-form","","separator","Description","Description","",""
-"com.axelor.wkf.db.node.Task","task-grid","grid","Tasks","Tâches","",""
-"com.axelor.wkf.db.node.Task","task-form","form","Task","Tâche","",""
+"com.axelor.wkf.db.node.Activity","task-grid","grid","Tasks","Tâches","",""
+"com.axelor.wkf.db.node.Activity","task-form","form","Task","Tâche","",""
 "task-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.node.gateway.InclusiveGateway","inclusive-gateway-grid","grid","Inclusive gateways","Passerelles inclusives","",""
 "com.axelor.wkf.db.node.gateway.InclusiveGateway","inclusive-gateway-form","form","Inclusive gateway","Passerelle inclusive","",""
