Update filter name.

--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -18,10 +18,10 @@
 "menu-wkf-intermediate-linkedin-event","Linkedin events","menu","Linkedin events","Linkedin","",""
 "menu-wkf-intermediate-twitter-event","twitter events","menu","twitter events","twitter","",""
 "menu-wkf-nodes-root-filter","Filters","menu","Filters","Filtres","",""
-"menu-wkf-filter","Filters","menu","Filters","Filtres","",""
-"menu-wkf-stop-filter","Stop filters","menu","Stop filters","Fin filtres","",""
+"menu-wkf-filter-event","Filters","menu","Filters","Filtres","",""
+"menu-wkf-stop-filter-event","Stop filters","menu","Stop filters","Fin filtres","",""
 "menu-wkf-nodes-root-activity","Activities","menu","Activities","Activités","",""
-"menu-wkf-task","Tasks","menu","Tasks","Tâches","",""
+"menu-wkf-activity","Activities","menu","Activities","Activités","",""
 "menu-wkf-nodes-root-gateway","Gateways","menu","Gateways","Passerelles","",""
 "menu-wkf-inclusive-gateway","Inclusive gateways","menu","Inclusive gateways","Inclusives","",""
 "menu-wkf-exclusive-gateway","Exclusive gateways","menu","Exclusive gateways","Exclusives","",""
@@ -227,24 +227,24 @@
 "com.axelor.wkf.db.node.message.socialnetwork.IntermediateTwitterEvent","templateModel","field","","Model de template","",""
 "com.axelor.wkf.db.node.message.socialnetwork.IntermediateTwitterEvent","privateMessage","field","","Message privé ?","",""
 
-"com.axelor.wkf.db.node.Filter","name","field","","Nom","",""
-"com.axelor.wkf.db.node.Filter","type","field","","Type","",""
-"com.axelor.wkf.db.node.Filter","action","field","","Action","",""
-"com.axelor.wkf.db.node.Filter","operator","field","","Opérateur Logique","",""
-"com.axelor.wkf.db.node.Filter","startTransitions","field","","Transition de départ","",""
-"com.axelor.wkf.db.node.Filter","endTransitions","field","","Transition de fin","",""
-"com.axelor.wkf.db.node.Filter","description","field","","Description","",""
-"com.axelor.wkf.db.node.Filter","ref","field","","Ref","",""
-"com.axelor.wkf.db.node.Filter","filter","field","","Filtre","",""
+"com.axelor.wkf.db.node.FilterEvent","name","field","","Nom","",""
+"com.axelor.wkf.db.node.FilterEvent","type","field","","Type","",""
+"com.axelor.wkf.db.node.FilterEvent","action","field","","Action","",""
+"com.axelor.wkf.db.node.FilterEvent","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.FilterEvent","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.FilterEvent","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.FilterEvent","description","field","","Description","",""
+"com.axelor.wkf.db.node.FilterEvent","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.FilterEvent","filter","field","","Filtre","",""
 
-"com.axelor.wkf.db.node.StopFilter","name","field","","Nom","",""
-"com.axelor.wkf.db.node.StopFilter","type","field","","Type","",""
-"com.axelor.wkf.db.node.StopFilter","action","field","","Action","",""
-"com.axelor.wkf.db.node.StopFilter","operator","field","","Opérateur Logique","",""
-"com.axelor.wkf.db.node.StopFilter","startTransitions","field","","Transition de départ","",""
-"com.axelor.wkf.db.node.StopFilter","endTransitions","field","","Transition de fin","",""
-"com.axelor.wkf.db.node.StopFilter","description","field","","Description","",""
-"com.axelor.wkf.db.node.StopFilter","ref","field","","Ref","",""
+"com.axelor.wkf.db.node.StopFilterEvent","name","field","","Nom","",""
+"com.axelor.wkf.db.node.StopFilterEvent","type","field","","Type","",""
+"com.axelor.wkf.db.node.StopFilterEvent","action","field","","Action","",""
+"com.axelor.wkf.db.node.StopFilterEvent","operator","field","","Opérateur Logique","",""
+"com.axelor.wkf.db.node.StopFilterEvent","startTransitions","field","","Transition de départ","",""
+"com.axelor.wkf.db.node.StopFilterEvent","endTransitions","field","","Transition de fin","",""
+"com.axelor.wkf.db.node.StopFilterEvent","description","field","","Description","",""
+"com.axelor.wkf.db.node.StopFilterEvent","ref","field","","Ref","",""
 
 "com.axelor.wkf.db.Gateway","name","field","","Nom","",""
 "com.axelor.wkf.db.Gateway","type","field","","Type","",""
@@ -298,13 +298,13 @@
 "node.logic.operator.selection","exclusive","select","XOR","XOR","",""
 
 "node.type.selection","startEvent","select","Start event","Démarrer","",""
-"node.type.selection","task","select","Task","Tâche","",""
+"node.type.selection","activity","select","Activity","Activité","",""
 "node.type.selection","endEvent","select","End event","Arrêt","",""
 "node.type.selection","gateway","select","Gateway","Passerelle","",""
 "node.type.selection","message","select","Message","Message","",""
 "node.type.selection","timer","select","Timer","Minuteur","",""
-"node.type.selection","filter","select","Filter","Filtre","",""
-"node.type.selection","stopFilter","select","Stop Filter","Fin filtre","",""
+"node.type.selection","filterEvent","select","Filter","Filtre","",""
+"node.type.selection","stopFilterEvent","select","Stop Filter","Fin filtre","",""
 
 "node.message.type.selection","email","select","E-mail","E-mail","",""
 "node.message.type.selection","mail","select","Mail","Courrier","",""
@@ -338,9 +338,9 @@
 "com.axelor.wkf.db.node.EndEvent","end-event-grid","grid","End events","Evènements de fin","",""
 "com.axelor.wkf.db.node.EndEvent","end-event-form","form","End event","Evènement de fin","",""
 "end-event-form","","separator","Description","Description","",""
-"com.axelor.wkf.db.node.Activity","task-grid","grid","Tasks","Tâches","",""
-"com.axelor.wkf.db.node.Activity","task-form","form","Task","Tâche","",""
-"task-form","","separator","Description","Description","",""
+"com.axelor.wkf.db.node.Activity","activity-grid","grid","Activities","Activités","",""
+"com.axelor.wkf.db.node.Activity","activity-form","form","Activity","Activité","",""
+"activity-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.node.gateway.InclusiveGateway","inclusive-gateway-grid","grid","Inclusive gateways","Passerelles inclusives","",""
 "com.axelor.wkf.db.node.gateway.InclusiveGateway","inclusive-gateway-form","form","Inclusive gateway","Passerelle inclusive","",""
 "inclusive-gateway-form","","separator","Description","Description","",""
@@ -392,11 +392,11 @@
 "com.axelor.wkf.db.node.message.socialnetwork.IntermediateTwitterEvent","intermediate-twitter-event-form","form","Twitter event","Evènement Twitter","",""
 "com.axelor.wkf.db.node.message.socialnetwork.IntermediateTwitterEvent","intermediate-twitter-event-grid","grid","Twitter events","Evènements Twitter","",""
 
-"com.axelor.wkf.db.node.Filter","filter-form","form","Filter","Filtre","",""
-"com.axelor.wkf.db.node.Filter","filter-grid","grid","Filters","Filtres","",""
+"com.axelor.wkf.db.node.FilterEvent","filter-event-form","form","Filter","Filtre","",""
+"com.axelor.wkf.db.node.FilterEvent","filter-event-grid","grid","Filters","Filtres","",""
 
-"com.axelor.wkf.db.node.StopFilter","stop-filter-form","form","Stop filter","Fin filtre","",""
-"com.axelor.wkf.db.node.StopFilter","stop-filter-grid","grid","Stop filters","Fin filtres","",""
+"com.axelor.wkf.db.node.StopFilterEvent","stop-filter-event-form","form","Stop filter","Fin filtre","",""
+"com.axelor.wkf.db.node.StopFilterEvent","stop-filter-event-grid","grid","Stop filters","Fin filtres","",""
 
 "action-wkf-instances","action-wkf-instances","action","Instances","Instances","",""
 "action-wkf-my-process","action-wkf-my-process","action","Process","Processus","",""
