New translation file.

--- a/axelor-auth/src/main/resources/i18n/fr.csv
+++ b/axelor-auth/src/main/resources/i18n/fr.csv
@@ -1,84 +1,117 @@
-domain,name,type,title,title_t,help,help_t
-menu-auth,User Management,menu,User Management,Gestion des utilisateurs,,
-menu-auth-groups,Groups,menu,Groups,Groupes,,
-menu-auth-permissions,Permissions,menu,Permissions,Permissions,,
-menu-auth-roles,Roles,menu,Roles,Roles,,
-menu-auth-users,Users,menu,Users,Utilisateurs,,
-com.axelor.auth.db.Group,code,field,,Code,,
-com.axelor.auth.db.Group,name,field,,Nom,,
-com.axelor.auth.db.Group,restricted,field,,Restrictif,,
-com.axelor.auth.db.Group,navigation,field,,Navigation,,
-com.axelor.auth.db.Group,permissions,field,,Permissions,,
-com.axelor.auth.db.Group,roles,field,,Roles,,
-com.axelor.auth.db.Permission,name,field,,Nom,,
-com.axelor.auth.db.Permission,object,field,,Objet,,
-com.axelor.auth.db.Permission,canRead,field,Read,Lecture,,
-com.axelor.auth.db.Permission,canWrite,field,Write,Modification,,
-com.axelor.auth.db.Permission,canCreate,field,Create,Création,,
-com.axelor.auth.db.Permission,canRemove,field,Remove,Suppression,,
-com.axelor.auth.db.Permission,readCondition,field,,Condition,,
-com.axelor.auth.db.Permission,readParams,field,,Paramètres,,
-com.axelor.auth.db.Permission,writeCondition,field,,Condition,,
-com.axelor.auth.db.Permission,writeParams,field,,Paramètres,,
-com.axelor.auth.db.Permission,createCondition,field,,Condition,,
-com.axelor.auth.db.Permission,createParams,field,,Paramètres,,
-com.axelor.auth.db.Permission,removeCondition,field,,Condition,,
-com.axelor.auth.db.Permission,removeParams,field,,Paramètres,,
-com.axelor.auth.db.Role,name,field,,Nom,,
-com.axelor.auth.db.Role,description,field,,Description,,
-com.axelor.auth.db.Role,users,field,,Utilisateurs,,
-com.axelor.auth.db.Role,groups,field,,Groupes,,
-com.axelor.auth.db.User,code,field,Login,Identifiant,,
-com.axelor.auth.db.User,name,field,,Nom,,
-com.axelor.auth.db.User,password,field,,Mot de passe,,
-com.axelor.auth.db.User,blocked,field,Blocked user ?,Bloquer utilisateur ?,Specify whether to block the user for an indeterminate times.,Bloque l'utilisateur pour une période indéterminée.
-com.axelor.auth.db.User,activeFrom,field,Active user from,Autoriser à partir de,Specify whether to allow the user from this specific date.,Autorise l'utilisateur à partir d'une date précise.
-com.axelor.auth.db.User,activeTo,field,Active user to,Autoriser jusqu'au,Specify whether to allow the user until this specific date.,Autorise l'utilisateur jusqu'une date précise.
-com.axelor.auth.db.User,group,field,,Groupe,,
-com.axelor.auth.db.User,roles,field,,Roles,,
-select.user.navigation,collapse,select,Collapse,Regrouper,,
-select.user.navigation,hidden,select,Hidden,Caché,,
-select.user.navigation,visible,select,Visible,Visible,,
-group-form,showPermissions,button,Show permissions,Voir les permissions,,
-com.axelor.auth.db.Group,group-form,form,User,Utilisateurs,,
-com.axelor.auth.db.Permission,,grid,Permissions,Permissions,,
-com.axelor.auth.db.Group,group-grid,grid,Groups,Groupes,,
-com.axelor.auth.db.Permission,permission-form,form,Permission,Permission,,
-permission-form,,group,General,Général,,
-permission-form,,group,Access,Accès,,
-permission-form,,group,Read,Lecture,,
-com.axelor.auth.db.Permission,Condition,viewField,Condition,Conditon,,
-com.axelor.auth.db.Permission,Params,viewField,Params,Parametres,,
-permission-form,,group,Write,Écriture,,
-com.axelor.auth.db.Permission,Condition,viewField,Condition,Conditon,,
-com.axelor.auth.db.Permission,Params,viewField,Params,Parametres,,
-permission-form,,group,Create,Créer,,
-com.axelor.auth.db.Permission,Condition,viewField,Condition,Conditon,,
-com.axelor.auth.db.Permission,Params,viewField,Params,Parametres,,
-permission-form,,group,Remove,Suppression,,
-com.axelor.auth.db.Permission,Condition,viewField,Condition,Conditon,,
-com.axelor.auth.db.Permission,Params,viewField,Params,Parametres,,
-com.axelor.auth.db.Permission,permission-grid,grid,Permissions,Permissions,,
-com.axelor.auth.db.Role,role-form,form,Role,Role,,
-com.axelor.auth.db.Group,,grid,Groups,Groupes,,
-role-form,,separator,Description,Description,,
-com.axelor.auth.db.Role,role-grid,grid,Roles,Roles,,
-com.axelor.auth.db.User,user-form,form,User,Utilisateurs,,
-user-form,,group,General Info,Informations général,,
-user-form,,group,Login,Identifiant,,
-user-form,,group,Authorization,Autorisation,,
-com.axelor.auth.db.User,user-grid,grid,Users,Utilisateurs,,
-action-auth-groups,action-auth-groups,action,Groups,Groupes,,
-action-auth-permissions,action-auth-permissions,action,Permissions,Permissions,,
-action-auth-roles,action-auth-roles,action,Roles,Roles,,
-action-auth-users,action-auth-users,action,Users,Utilisateurs,,
-action-group-validData,action-group-validData,action,Code length should be greater than 2.,La longueur de l'identifiant doit être supérieur à 2,,
-action-group-validData,action-group-validData,action,Name length should be greater than 2.,La longueur du nom doit être supérieur à 2,,
-action-group-view-permissions,action-group-view-permissions,action,Permissions,Permissions,,
-action-user-validData,action-user-validData,action,Password length should be greater than 4.,La longueur du mot de passe doit être supérieur à 4,,
-action-user-validData,action-user-validData,action,Code length should be greater than 2.,La longueur de l'identifiant doit être supérieur à 2,,
-action-user-validData,action-user-validData,action,Name length should be greater than 2.,La longueur du nom doit être supérieur à 2,,
-axelor-auth,Duplicates found:,other,Duplicates found:,Doublons trouvés:,,
-axelor-auth,Not a valid object.,other,Not a valid object.,Objet non valide.,,
-axelor-auth,Object found:,other,Object found:,Objet trouvés:,,
-axelor-auth,Only one permission per object is required.,other,Only one permission per object is required.,Une seule permission par objet est requise.,,
+"domain","name","type","title","title_t","help","help_t"
+,,"menu","User Management","Gestion des utilisateurs",,
+,,"menu","Groups","Groupes",,
+,,"menu","Permissions","Permissions",,
+,,"menu","Roles","Roles",,
+,,"menu","Users","Utilisateurs",,
+"com.axelor.auth.db.Group","code","field",,"Code",,
+"com.axelor.auth.db.Group","name","field",,"Nom",,
+"com.axelor.auth.db.Group","restricted","field",,"Restrictif",,
+"com.axelor.auth.db.Group","navigation","field",,"Navigation",,
+"com.axelor.auth.db.Group","permissions","field",,"Permissions",,
+"com.axelor.auth.db.Group","roles","field",,"Roles",,
+"com.axelor.auth.db.Permission","name","field",,"Nom",,
+"com.axelor.auth.db.Permission","object","field",,"Objet",,
+"com.axelor.auth.db.Permission","canRead","field","Read","Lecture",,
+"com.axelor.auth.db.Permission","canWrite","field","Write","Modification",,
+"com.axelor.auth.db.Permission","canCreate","field","Create","Création",,
+"com.axelor.auth.db.Permission","canRemove","field","Remove","Suppression",,
+"com.axelor.auth.db.Permission","readCondition","field",,"Condition",,
+"com.axelor.auth.db.Permission","readParams","field",,"Paramètres",,
+"com.axelor.auth.db.Permission","writeCondition","field",,"Condition",,
+"com.axelor.auth.db.Permission","writeParams","field",,"Paramètres",,
+"com.axelor.auth.db.Permission","createCondition","field",,"Condition",,
+"com.axelor.auth.db.Permission","createParams","field",,"Paramètres",,
+"com.axelor.auth.db.Permission","removeCondition","field",,"Condition",,
+"com.axelor.auth.db.Permission","removeParams","field",,"Paramètres",,
+"com.axelor.auth.db.Role","name","field",,"Nom",,
+"com.axelor.auth.db.Role","description","field",,"Description",,
+"com.axelor.auth.db.Role","users","field",,"Utilisateurs",,
+"com.axelor.auth.db.Role","groups","field",,"Groupes",,
+"com.axelor.auth.db.User","code","field","Login","Identifiant",,
+"com.axelor.auth.db.User","name","field",,"Nom",,
+"com.axelor.auth.db.User","password","field",,"Mot de passe",,
+"com.axelor.auth.db.User","blocked","field","Blocked user ?","Bloquer utilisateur ?","Specify whether to block the user for an indeterminate times.","Bloque l'utilisateur pour une période indéterminée."
+"com.axelor.auth.db.User","activeFrom","field","Active user from","Autoriser à partir de","Specify whether to allow the user from this specific date.","Autorise l'utilisateur à partir d'une date précise."
+"com.axelor.auth.db.User","activeTo","field","Active user to","Autoriser jusqu'au","Specify whether to allow the user until this specific date.","Autorise l'utilisateur jusqu'une date précise."
+"com.axelor.auth.db.User","group","field",,"Groupe",,
+"com.axelor.auth.db.User","roles","field",,"Roles",,
+,,"select","Visible","Visible",,
+,,"select","Hidden","Caché",,
+,,"select","Collapse","Regrouper",,
+"com.axelor.auth.db.Group",,"button","Show permissions","Voir les permissions",,
+"com.axelor.auth.db.Group",,"view","Group","Groupe",,
+"com.axelor.auth.db.Permission",,"view","Permissions","Permissions",,
+"com.axelor.auth.db.Group",,"view","Groups","Groupes",,
+"com.axelor.auth.db.Permission",,"view","Permission","Permission",,
+"com.axelor.auth.db.Permission",,"group","General","Général",,
+"com.axelor.auth.db.Permission",,"group","Access","Accès",,
+"com.axelor.auth.db.Permission",,"group","Read","Lecture",,
+"com.axelor.auth.db.Permission",,"viewField","Condition","Conditon",,
+"com.axelor.auth.db.Permission",,"viewField","Params","Parametres",,
+"com.axelor.auth.db.Permission",,"group","Write","Écriture",,
+"com.axelor.auth.db.Permission",,"viewField","Condition","Conditon",,
+"com.axelor.auth.db.Permission",,"viewField","Params","Parametres",,
+"com.axelor.auth.db.Permission",,"group","Create","Créer",,
+"com.axelor.auth.db.Permission",,"viewField","Condition","Conditon",,
+"com.axelor.auth.db.Permission",,"viewField","Params","Parametres",,
+"com.axelor.auth.db.Permission",,"group","Remove","Suppression",,
+"com.axelor.auth.db.Permission",,"viewField","Condition","Conditon",,
+"com.axelor.auth.db.Permission",,"viewField","Params","Parametres",,
+"com.axelor.auth.db.Permission",,"view","Permissions","Permissions",,
+"com.axelor.auth.db.Role",,"view","Role","Role",,
+"com.axelor.auth.db.Group",,"view","Groups","Groupes",,
+"com.axelor.auth.db.Role",,"separator","Description","Description",,
+"com.axelor.auth.db.Role",,"view","Roles","Roles",,
+"com.axelor.auth.db.User",,"view","User","Utilisateurs",,
+"com.axelor.auth.db.User",,"group","General Info","Informations général",,
+"com.axelor.auth.db.User",,"group","Login","Identifiant",,
+"com.axelor.auth.db.User",,"group","Authorization","Autorisation",,
+"com.axelor.auth.db.User",,"view","Users","Utilisateurs",,
+,,"action","Groups","Groupes",,
+,,"action","Permissions","Permissions",,
+,,"action","Roles","Roles",,
+,,"action","Users","Utilisateurs",,
+,,"action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2",,
+,,"action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2",,
+,,"action","Permissions","Permissions",,
+,,"action","Password length should be greater than 4.","La longueur du mot de passe doit être supérieur à 4",,
+,,"action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2",,
+,,"action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2",,
+"axelor-auth",,"other","Duplicates found:","Doublons trouvés:",,
+"axelor-auth",,"other","Not a valid object.","Objet non valide.",,
+"axelor-auth",,"other","Object found:","Objet trouvés:",,
+"axelor-auth",,"other","Only one permission per object is required.","Une seule permission par objet est requise.",,
+"role-form","name","documentation",,,,
+"role-form","groups","documentation",,,,
+"role-form","users","documentation",,,,
+"role-form","description","documentation",,,,
+"group-form","showPermissions","documentation",,,,
+"group-form","name","documentation",,,,
+"group-form","code","documentation",,,,
+"group-form","navigation","documentation",,,,
+"group-form","restricted","documentation",,,,
+"group-form","permissions","documentation",,,,
+"group-form","roles","documentation",,,,
+"permission-form","name","documentation",,,,
+"permission-form","object","documentation",,,,
+"permission-form","canRead","documentation",,,,
+"permission-form","canWrite","documentation",,,,
+"permission-form","canCreate","documentation",,,,
+"permission-form","canRemove","documentation",,,,
+"permission-form","readCondition","documentation",,,,
+"permission-form","readParams","documentation",,,,
+"permission-form","writeCondition","documentation",,,,
+"permission-form","writeParams","documentation",,,,
+"permission-form","createCondition","documentation",,,,
+"permission-form","createParams","documentation",,,,
+"permission-form","removeCondition","documentation",,,,
+"permission-form","removeParams","documentation",,,,
+"user-form","name","documentation",,,,
+"user-form","group","documentation",,,,
+"user-form","code","documentation",,,,
+"user-form","password","documentation",,,,
+"user-form","blocked","documentation",,,,
+"user-form","activeFrom","documentation",,,,
+"user-form","activeTo","documentation",,,,
+"user-form","roles","documentation",,,,
