--- a/axelor-meta/src/main/resources/i18n/fr.csv
+++ b/axelor-meta/src/main/resources/i18n/fr.csv
@@ -152,13 +152,13 @@
 ,,"select","Page","Page",,
 ,,"select","Separator","Separateur",,
 ,,"select","Label","Label",,
-,,"select","Button","Boutton",,
+,,"select","Button","Bouton",,
 ,,"select","Menu","Menu",,
 ,,"select","Action Menu","Action de menu",,
 ,,"select","View","Vue",,
 ,,"select","Tree","Arbre",,
 ,,"select","Chart","Graphique",,
-,,"select","Portlet","Portler",,
+,,"select","Portlet","Portlet",,
 ,,"select","Search","Recherche",,
 ,,"select","Filter","Filtre",,
 ,,"select","Action","Action",,
@@ -296,7 +296,7 @@
 "com.axelor.meta.db.MetaTranslation",,"viewField","Import type","Type d'import",,
 "com.axelor.meta.db.MetaTranslation",,"viewField","Import path","Chemin d'import",,
 "com.axelor.meta.db.MetaTranslation",,"button","Import","Import",,
-"com.axelor.meta.db.MetaTranslation",,"button","All the customizations will be lost. Are you sure?","Toutes les changements seront perdus. Voulez-vous continuer ?",,
+"com.axelor.meta.db.MetaTranslation",,"button","All the customizations will be lost. Are you sure?","Tous les changements seront perdus. Voulez-vous continuer ?",,
 "com.axelor.meta.db.MetaTranslation",,"view","All Translations","Les Traductions",,
 "com.axelor.meta.db.MetaUser",,"view","Preferences","Préférences",,
 "com.axelor.meta.db.MetaUser",,"view","Preferences","Préférences",,
@@ -308,7 +308,7 @@
 "com.axelor.meta.db.MetaView",,"button","Validate","Valider",,
 "com.axelor.meta.db.MetaView",,"button","Restore","Restaurer",,
 "com.axelor.meta.db.MetaView",,"button","Restore All","Tout restaurer",,
-"com.axelor.meta.db.MetaView",,"button","All the customizations will be lost. Are you sure?","Toutes les changements seront perdus. Voulez-vous continuer ?",,
+"com.axelor.meta.db.MetaView",,"button","All the customizations will be lost. Are you sure?","Tous les changements seront perdus. Voulez-vous continuer ?",,
 "com.axelor.meta.db.MetaView",,"button","Preview","Aperçu",,
 "com.axelor.meta.db.MetaView",,"view","All Views","Les Vues",,
 ,,"action","Action Menus","Les Action Menus",,
@@ -325,7 +325,7 @@
 ,,"action","Modules","Modules",,
 ,,"action","Preferences","Préférences",,
 ,,"action","Preferences","Préférences",,
-"axelor-meta",,"other","All the customizations will be lost. Are you sure?","Toutes les changements seront perdus. Voulez-vous continuer ?",,
+"axelor-meta",,"other","All the customizations will be lost. Are you sure?","Tous les changements seront perdus. Voulez-vous continuer ?",,
 "axelor-meta",,"other","Export done.","Export terminé.",,
 "axelor-meta",,"other","exportPath","Chemin d'export",,
 "axelor-meta",,"other","Field is required.","Champ requis.",,
@@ -333,8 +333,8 @@
 "axelor-meta",,"other","Invalid field value.","Valeur non valide.",,
 "axelor-meta",,"other","Not implemented yet!","Pas encore implémenté!",,
 "axelor-meta",,"other","Please enter your export path fisrt.","Merci de renseigner un chemin d'export.",,
-"axelor-meta",,"other","Please enter your import path fisrt.","Merci de renseigner un chemin d'import",,
-"axelor-meta",,"other","Please select an import type first.","Merci de renseigner un type d'import",,
+"axelor-meta",,"other","Please enter your import path fisrt.","Merci de renseigner un chemin d'import.",,
+"axelor-meta",,"other","Please select an import type first.","Merci de renseigner un type d'import.",,
 ,"key","documentation",,,,
 ,"groupBy","documentation",,,,
 ,"aggregate","documentation",,,,
